# commitizen

./: .bumpversion.cfg  .codacy.yaml  .cz.cfg  .cz.toml  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .taplo.toml  .travis.yml  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.rst  SKILL.md  auto_check.html  bump.html  changelog.html  check.html  config.html  contributing.html  customization.html  exit_codes.html  external_links.html  faq.html  index.html  index.md  init.html  llms-full.txt  llms.txt  lychee.toml  mkdocs.yml  pyproject.toml  pyproject.toml.bk  setup.cfg  (+8 more)
.github/: .codecov.yml  CODEOWNERS  FUNDING.yml  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.md  documentation.yml  feature_request.md  feature_request.yml  non_core.yml  question.yml
.github/workflows/: bumpversion.yml  dockerpublish.yml  docspublish.yaml  docspublish.yml  generate_cli_screenshots.yml  homebrewpublish.yaml  homebrewpublish.yml  label_issues.yaml  label_issues.yml  label_pr.yaml  label_pr.yml  links.yml  pr-bump-preview.yml  pythonpackage.yml  pythonpublish.yaml  pythonpublish.yml  validate_pr.yml
auto_check/: index.html
bump/: index.html
changelog/: index.html
check/: index.html
commands/bump/: index.html  index.md
commands/changelog/: index.html  index.md
commands/check/: index.html  index.md
commands/commit/: index.html  index.md
commands/example/: index.html  index.md
commands/info/: index.html  index.md
commands/init/: index.html  index.md
commands/ls/: index.html
commands/schema/: index.html  index.md
commands/version/: index.html  index.md
commit/: index.html
commitizen/: __init__.py  __main__.py  __version__.py  application.py  bump.py  bump_rule.py  changelog.py  changelog_parser.py  cli.py  cmd.py  config.py  containers.py  deafults.py  decli_parser.py  defaults.py  error_codes.py  exceptions.py  factory.py  git.py  hooks.py  interactive_preview.py  out.py  preview_questions.py  project_info.py  providers.py  question.py  tags.py  version_increment.py  version_providers.py  version_schemes.py  version_types.py  wrap_stdio.py  wrap_stdio_linux.py  wrap_stdio_unix.py  wrap_stdio_windows.py
commitizen/changelog_formats/: __init__.py  asciidoc.py  base.py  markdown.py  restructuredtext.py  textile.py
commitizen/commands/: __init__.py  bump.py  changelog.py  check.py  commit.py  dump_config.py  example.py  info.py  init.py  list_cz.py  schema.py  undo.py  version.py
commitizen/config/: __init__.py  base_config.py  factory.py  ini_config.py  json_config.py  settings.py  toml_config.py  yaml_config.py
commitizen/cz/: __init__.py  base.py  changelog_template.j2  cz_angular.py  cz_angular_info.txt  cz_base.py  cz_conventional_changelog.py  cz_conventional_commits.py  cz_jira.py  exceptions.py  utils.py
commitizen/formats/: __init__.py  asciidoc.py  base.py  errors.py  markdown.py  restructuredtext.py  textile.py
commitizen/providers/: __init__.py  base_provider.py  cargo_provider.py  commitizen_provider.py  composer_provider.py  dart_provider.py  mvn_provider.py  npm_provider.py  pep621_provider.py  pep751_provider.py  poetry_provider.py  rye_provider.py  scm_provider.py  uv_provider.py
commitizen/templates/: CHANGELOG.adoc.j2  CHANGELOG.textile.j2  keep_a_changelog_template.j2
commitizen/wrap_stdio/: __init__.py  linux.py  unix.py  windows.py
config/: index.html
config/bump/: index.html  index.md
config/changelog/: index.html  index.md
config/check/: index.html  index.md
config/commit/: index.html  index.md
config/configuration_file/: index.html  index.md
config/option/: index.html  index.md
config/version_provider/: index.html  index.md
contributing/: index.html
contributing/contributing/: index.html  index.md
contributing/contributing_tldr/: index.html  index.md
contributing/pull_request/: index.html  index.md
contributing_tldr/: index.html
customization/: index.html
customization/changelog_template/: index.html  index.md
docs/: README.md  auto_check.md  bump.md  changelog.md  check.md  commit.md  config.md  contributing.md  contributing_tldr.md  customization.md  exit_codes.md  external_links.md  faq.md  features_wont_add.md  getting_started.md  history.md  index.md  init.md  llms.txt  third-party-commitizen.md
exit_codes/: index.html  index.md
external_links/: index.html
faq/: index.html  index.md
features_wont_add/: index.html
getting_started/: index.html
history/: index.html
hooks/: post-commit.py  prepare-commit-msg.py  prepare-commit-msg.sh
images/: bump.tape  bump.yml  commit.tape  shortcut_custom.tape
init/: index.html
scripts/: deploy  format  gen_cli_help_screenshots.py  gen_cli_interactive_gifs.py  lint  publish  test
search/: search_index.json
tests/: CHANGELOG_FOR_TEST.md  conftest.py  test_application.py  test_bump_command.py  test_bump_create_commit_message.py  test_bump_create_tag.py  test_bump_find_commits.py  test_bump_find_increment.py  test_bump_find_version.py  test_bump_find_version_provider.py  test_bump_find_version_type_semver.py  test_bump_hooks.py  test_bump_normalize_tag.py  test_bump_rule.py  test_bump_update_version_in_files.py  test_changelog.py  test_changelog_format_asciidoc.py  test_changelog_format_markdown.py  test_changelog_format_restructuredtext.py  test_changelog_format_textile.py  test_changelog_formats.py  test_changelog_meta.py  test_changelog_parser.py  test_cli.py  test_cli_config_integration.py  test_cmd.py  test_command_commit.py  test_commands.py  test_conf.py  test_containers.py  test_customized_cz_conventional_commits.py  test_cz_base.py  test_cz_conventional_commits.py  test_cz_customize.py  test_cz_jira.py  test_cz_search_filter.py  test_cz_utils.py  test_defaults.py  test_deprecated.py  test_exceptions.py  (+18 more)
third-party-commitizen/: index.html
tutorials/: github_actions.html  gitlab_ci.html  jenkins_pipeline.html  writing_commits.html  writing_commits.md.bak
(+296 files in other folders)
